# rest-client

./: README.lhs  rest-client.cabal
src/Network/: JsonClient.hs  RestClient.hs
test/: Helper.hs
test/Network/: JsonClientSpec.hs  RestClientSpec.hs
