name:             rest-client
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Network.JsonClient
      Network.RestClient
  build-depends:
      base          == 4.*
    , bytestring
    , transformers
    , failure
    , http-client
    , http-client-tls
    , aeson
    , aeson-toolkit == 0.0.0

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , deepseq
    , bytestring
    , transformers
    , http-types
    , conduit
    , wai
    , warp
    , rest-client
    , hspec >= 1.5
